--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Spring DataSource (MySQL)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/timecapsure?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=newyear
+spring.datasource.username=timecapsure
 spring.datasource.password=
 
 # Spring JPA
