fix : 환경변수 제거

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Spring DataSource (MySQL)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/timecapsure?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=timecapsure
-spring.datasource.password=
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 # Spring JPA
 spring.jpa.database=mysql
@@ -14,8 +14,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=hjkim2902@gmail.com
-spring.mail.password=iaocuadlxyhaxora
+spring.mail.username=${SMTP_USERNAME}
+spring.mail.password=${SMTP_PASSWORD}
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
